# GameOfLife

./: .gitignore  CMakeLists.txt  README.md
ForMacOS/: pentadecathlon.txt  pulsar.txt  spaceship.txt
ForWindows/: Makefile  game_of_life.c  gun.txt  pulsar.txt  spaceship.txt
ForWindows/Game_Of_Life/: game_of_life.c
ForWindows/Headers/: game_of_life.h
ForWindows/Maps/: blinker.txt  gun.txt
ForWindows/Properties/: display.c  gotoxy.c  initialize.c  memoryCleaner.c  menu.c  update.c
MacOS/: Makefile  a.out  display.c  displayMenu.c  gameOfLife.c  gameOfLife.h  gameOfLife.h.gch  game_of_life.c  init.c  initialize.c  memory_management.c  update_grid.c
MacOS/headers/: gameOfLife.h  gameOfLife.h.gch
MacOS/tools/: display.c  displayMenu.c  initialize.c  memory_management.c  update_grid.c
